BAH-3932 | Add. Bump Java Version 11 -> 17 And Required Dependencies (#116)
* [Rahul] | BAH-3932 | Add. Bump Java Version 11 -> 17

* [Rahul] | BAH-3932 | Add. Bump Dependencies For Java 17 Migration

javax -> jakarta
remove velocity-engine-core
introduce snakeyaml, netty-codec-http

* [Rahul] | BAH-3932 | Fix. Servelet contextConfigLocation For Java 17 Migration

* [Rahul] | BAH-3932 | Fix. javax -> jakarta

* [Rahul] | BAH-3932 | Add. Bump Dependencies For Java 17 Migration

spring 5.3.30 -> 6.0.19
jakarta servlet-api 3.0.1 -> 6.0.0
spring-boot 3.0.0 -> 3.0.13
Introduce Test Configuration For Mockito

* [Rahul] | BAH-3932 | Add. Embedded Tomcat 10 Support

* [Rahul] | BAH-3932 | Add. Bump Maven Wrapper For Jdk 17 Support